# cpp-project-template

./: CMakeLists.txt  Makefile  flake.nix
src/: .main.cpp.swp  CMakeLists.txt  main.cpp
